fix align study

--- a/frontend/src/assets/css/app.css
+++ b/frontend/src/assets/css/app.css
@@ -964,7 +964,6 @@
     right: 31%;
     width: 108px;
     height: 108px;
-    top: 78%;
 }
 
 .footer-login{
